updated the profile orgs info page to take the new user model. started to refactor how models are represented in the backend as well.
