# backend/Application/Organisers/Queries/GetAllOrganisers/GetAllOrganisersResponse.cs
@@ -1,14 +1,10 @@
-﻿using System;
+﻿using Application.Common.Models;
 using System.Collections.Generic;
-using System.Linq;
-using System.Text;
-using System.Threading.Tasks;
 
 namespace Application.Organisers.Queries.GetAllOrganisers
 {
     public class GetAllOrganisersResponse
     {
-        public int Id { get; set; }
-        public string Name { get; set; }
+        public List<Organiser> Organisers { get; set; }
     }
 }
